Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114121

tst_custominput does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta2, 6.7.0 FF
    • 6.6
    • Graphs: 3D
    • None
    • 7661e6978 (dev), fdffe3595 (6.6)

      custominput manual test does not work. It should select when hovering/moving the mouse over the scatter points, but it does not.

      This already worked after the input handling fix, but something broke it afterwards. The bug could be in input handling, or the test itself.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes