Fix custom input handling

Pick-to: 6.6
Fixes: QTBUG-114121
Change-Id: I9540b7c6af45872957349cab8c88a52a5dee68db
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>